Prevent buttons from overlapping header

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -67,6 +67,7 @@ body {
 
     --header-height: 10vh;
     --header-margin-x: 10%;
+    --header-z-index: 1000;
 }
 
 #app {
